# GaussianSplatting

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
datasets/: sparse_point_cloud.ply
demos/: CMakeLists.txt
demos/singleSplat/: CMakeLists.txt
demos/singleSplat/include/: bufferStructures.hpp  demoState.hpp  openglResources.hpp
demos/singleSplat/source/: bufferStructures.cpp  demoState.cpp  main.cpp  openglResources.cpp
demos/unoptimizedPointCloud/: CMakeLists.txt
demos/unoptimizedPointCloud/include/: bufferStructures.hpp  demoState.hpp  openglResources.hpp
demos/unoptimizedPointCloud/source/: bufferStructures.cpp  demoState.cpp  main.cpp
include/gaussianSplatting/: glProgramSetup.hpp  imguiWrapper.hpp  randomAttributes.hpp
include/gaussianSplatting/primitives/: gaussianSplat.hpp  point.hpp
presentation/: main.typ  notes.txt  template.typ
shaders/compute/: assignSplatsToScreenTiles.comp  orderAllSplats.comp  orderGaussianSplats.comp  renderAllSplatsToTexture.comp
shaders/rendering/: debugAxesRendering.frag  debugAxesRendering.vert
source/: camera.cpp  datasetManipulation.cpp  glProgramSetup.cpp  imguiWrapper.cpp
source/primitives/: gaussianSplat.cpp  point.cpp
